# hik_fscan

./: CMakeLists.txt  build.bat  config.json
go_backend/: HealthCheck.go  bridge.go  config.go  config.json  dispatcher.go  go.mod  go.sum  logger.go  main.go  retry_queue.go
includes/: alarm_parser.h  hik_adapter.h  listener.h
python_backend/: app.py
python_backend/api/: routes.py
python_backend/auth/: auth.py
python_backend/config/: config.json  logger.py  secret_config.py
python_backend/data/: events.db
python_backend/db/: init.py  models.py
python_backend/notifier/: telegram.py
src/: alarm_parser.cpp  hik_adapter.cpp  listener.cpp
